[OS/2] Bug 418645: content of mplayer plugin spills over into content area when scrolling, r=mkaply